<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainActivityRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <GridLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" >

        <Button
            android:id="@+id/standUpButton"
            android:layout_column="0"
            android:layout_row="0"
            android:onClick="standUp"
            android:text="@string/standUpButtonText" />

        <Button
            android:id="@+id/sitDownButton"
            android:layout_column="2"
            android:layout_row="0"
            android:onClick="sitDown"
            android:text="@string/sitDownButtonText" />

        <ToggleButton
            android:id="@+id/headStiffnessButton"
            android:layout_column="1"
            android:layout_row="0"
            android:textOff="@string/headStiffnessButtonText"
            android:textOn="@string/headStiffnessButtonText" />
    </GridLayout>

    <RelativeLayout
        android:id="@+id/shapesLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/buttonsLayout"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/walkImageView"
            android:layout_width="@dimen/input_axis_size"
            android:layout_height="@dimen/input_axis_size"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/walkImageViewDescription"
            android:padding="10dp"
            android:src="@drawable/walk_shape" />

        <ImageView
            android:id="@+id/rotateImageView"
            android:layout_width="@dimen/input_axis_size"
            android:layout_height="@dimen/input_axis_width"
            android:layout_above="@+id/walkImageView"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/rotateImageViewDescription"
            android:padding="10dp"
            android:src="@drawable/walk_shape" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/camLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/shapesLayout"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true" >
    </RelativeLayout>

</RelativeLayout>